Added jquery.min file

--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -198,14 +198,14 @@
           <div class="row">
             <div class="col-md-6">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
-                  <figure class="cc-effect"><img src="images/project-1.jpg" alt="Image"/>
+                  <figure class="cc-effect"><img src="{%static 'images/project-1.jpg'%}" alt="Image"/>
                     <figcaption>
                       <div class="h4">Recent Project</div>
                       <p>Web Development</p>
                     </figcaption>
                   </figure></a></div>
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
-                  <figure class="cc-effect"><img src="images/project-2.jpg" alt="Image"/>
+                  <figure class="cc-effect"><img src="{% static 'images/project-2.jpg' %}" alt="Image"/>
                     <figcaption>
                       <div class="h4">Startup Project</div>
                       <p>Web Development</p>
@@ -214,14 +214,14 @@
             </div>
             <div class="col-md-6">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
-                  <figure class="cc-effect"><img src="images/project-3.jpg" alt="Image"/>
+                  <figure class="cc-effect"><img src="{% static 'images/project-3.jpg' %}" alt="Image"/>
                     <figcaption>
                       <div class="h4">Food Order Project</div>
                       <p>Web Development</p>
                     </figcaption>
                   </figure></a></div>
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
-                  <figure class="cc-effect"><img src="images/project-4.jpg" alt="Image"/>
+                  <figure class="cc-effect"><img src="{% static 'images/project-4.jpg' %}" alt="Image"/>
                     <figcaption>
                       <div class="h4">Web Advertising Project</div>
                       <p>Web Development</p>
@@ -236,14 +236,14 @@
           <div class="row">
             <div class="col-md-6">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#graphic-design">
-                  <figure class="cc-effect"><img src="images/graphic-design-1.jpg" alt="Image"/>
+                  <figure class="cc-effect"><img src="{%static 'images/graphic-design-1.jpg' %}" alt="Image"/>
                     <figcaption>
                       <div class="h4">Triangle Pattern</div>
                       <p>Graphic Design</p>
                     </figcaption>
                   </figure></a></div>
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#graphic-design">
-                  <figure class="cc-effect"><img src="images/graphic-design-2.jpg" alt="Image"/>
+                  <figure class="cc-effect"><img src="{% static 'images/graphic-design-2.jpg' %}" alt="Image"/>
                     <figcaption>
                       <div class="h4">Abstract Umbrella</div>
                       <p>Graphic Design</p>
@@ -252,14 +252,14 @@
             </div>
             <div class="col-md-6">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#graphic-design">
-                  <figure class="cc-effect"><img src="images/graphic-design-3.jpg" alt="Image"/>
+                  <figure class="cc-effect"><img src="{% static 'images/graphic-design-3.jpg' %}" alt="Image"/>
                     <figcaption>
                       <div class="h4">Cube Surface Texture</div>
                       <p>Graphic Design</p>
                     </figcaption>
                   </figure></a></div>
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#graphic-design">
-                  <figure class="cc-effect"><img src="images/graphic-design-4.jpg" alt="Image"/>
+                  <figure class="cc-effect"><img src="{% static 'images/graphic-design-4.jpg' %}" alt="Image"/>
                     <figcaption>
                       <div class="h4">Abstract Line</div>
                       <p>Graphic Design</p>
@@ -274,14 +274,14 @@
           <div class="row">
             <div class="col-md-6">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#Photography">
-                  <figure class="cc-effect"><img src="images/photography-1.jpg" alt="Image"/>
+                  <figure class="cc-effect"><img src="{% static 'images/photography-1.jpg' %}" alt="Image"/>
                     <figcaption>
                       <div class="h4">Photoshoot</div>
                       <p>Photography</p>
                     </figcaption>
                   </figure></a></div>
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#Photography">
-                  <figure class="cc-effect"><img src="images/photography-3.jpg" alt="Image"/>
+                  <figure class="cc-effect"><img src="{% static 'images/photography-3.jpg' %}" alt="Image"/>
                     <figcaption>
                       <div class="h4">Wedding Photoshoot</div>
                       <p>Photography</p>
@@ -290,14 +290,14 @@
             </div>
             <div class="col-md-6">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#Photography">
-                  <figure class="cc-effect"><img src="images/photography-2.jpg" alt="Image"/>
+                  <figure class="cc-effect"><img src="{% static 'images/photography-2.jpg' %}" alt="Image"/>
                     <figcaption>
                       <div class="h4">Beach Photoshoot</div>
                       <p>Photography</p>
                     </figcaption>
                   </figure></a></div>
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#Photography">
-                  <figure class="cc-effect"><img src="images/photography-4.jpg" alt="Image"/>
+                  <figure class="cc-effect"><img src="{% static 'images/photography-4.jpg' %}" alt="Image"/>
                     <figcaption>
                       <div class="h4">Nature Photoshoot</div>
                       <p>Photography</p>
@@ -427,59 +427,9 @@
     </div>
   </div>
 </div>
-<div class="section" id="reference">
-  <div class="container cc-reference">
 
-                                     <!-- REFERENCE FIELDS STARTS RIGHT HERE -->
-    <div class="h4 mb-4 text-center title">References</div>
-    <div class="card" data-aos="zoom-in">
-      <div class="carousel slide" id="cc-Indicators" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li class="active" data-target="#cc-Indicators" data-slide-to="0"></li>
-          <li data-target="#cc-Indicators" data-slide-to="1"></li>
-          <li data-target="#cc-Indicators" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <div class="row">
-              <div class="col-lg-2 col-md-3 cc-reference-header"><img src="#" alt="Image"/>
-                <div class="h5 pt-2">Write the Name of Refernce Provider</div>
-                <p class="category">His/Her Position</p>
-              </div>
-              <div class="col-lg-10 col-md-9">
-                <p>Refernce Detail </p>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="row">
-              <div class="col-lg-2 col-md-3 cc-reference-header"><img src="#" alt="Image"/>
-                <div class="h5 pt-2">Write the Name of Refernce Provider</div>
-                <p class="category">His/Her Position</p>
-              </div>
-              <div class="col-lg-10 col-md-9">
-                <p>Refernce Detail</p>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="row">
-              <div class="col-lg-2 col-md-3 cc-reference-header"><img src="#" alt="Image"/>
-                <div class="h5 pt-2">Write the Name of Refernce Provider</div>
-                <p class="category">His/Her Position</p>
-              </div>
-              <div class="col-lg-10 col-md-9">
-                <p>Refernce Detail</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 <div class="section" id="contact">
-  <div class="cc-contact-information" style="background-image: url('images/staticmap.png');">
+  <div class="cc-contact-information" style="background-image: url('{% static 'images/staticmap.png'%}');">
     <div class="container">
       <div class="cc-contact">
         <div class="row">
@@ -559,7 +509,7 @@
     <script src="{% static 'js/core/jquery.3.2.1.min.js' %}"></script>
     <script src="{% static 'js/core/popper.min.js' %}"></script>
     <script src="{% static 'js/core/bootstrap.min.js' %}"></script>
-    <script src="{% static 'js/now-ui-kit.js?v=1.1.0' %}"></script>
+    <script src="{% static 'js/now-ui-kit.js' %}"></script>
     <script src="{% static 'js/aos.js' %}"></script>
     <script src="{% static 'scripts/main.js' %}"></script>
   </body>
