--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -43,8 +43,8 @@
       <div class="container">
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="{% static 'images/blank-profile-picture-973460_640.png' %}" alt="Image"/></a></div>
-          <div class="h2 title"><i>Write Your name</i></div>
-          <p class="category text-white"><i>Write Your Skills</i></p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a>
+          <div class="h2 title">Yash Wankhade</div>
+          <p class="category text-white"><i>Blogger, Photographer, Web developer</i></p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a>
         </div>
       </div>
       <div class="section">
@@ -65,8 +65,8 @@
                            <!-- ABOUT SECTION STARTS RIGHT HERE -->
 
             <div class="h4 mt-0 title">About</div>
-            <p>Write About Yourself</p>
-            <p>Elaborate </p>
+            <p>Hello! I am Yash Wankhade, currently a Second Year Computer Engineering Student at VIIT.</p>
+            <p>I am a Blogger, Photographer. I am interested in freelancing. Can build responsive websites for clients. </p>
           </div>
         </div>
         <div class="col-lg-6 col-md-12">
@@ -78,23 +78,23 @@
             <div class="h4 mt-0 title">Basic Information</div>
             <div class="row">
               <div class="col-sm-4"><strong class="text-uppercase">Age:</strong></div>
-              <div class="col-sm-8"><i>Write Your Age</i></div>
+              <div class="col-sm-8"><i>19</i></div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
-              <div class="col-sm-8"><i>Write Your Email</i></div>
+              <div class="col-sm-8"><i>wyash090@gmail.com</i></div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Phone:</strong></div>
-              <div class="col-sm-8"><i>Write your Phone No.</i></div>
+              <div class="col-sm-8"><i>9075213884</i></div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Address:</strong></div>
-              <div class="col-sm-8"><i>Enter Your Address</i></div>
+              <div class="col-sm-8"><i>Hadapsar, Pune</i></div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Language:</strong></div>
-              <div class="col-sm-8"><i>Enter Your Languages You know </i></div>
+              <div class="col-sm-8"><i>English, Hindi, Marathi </i></div>
             </div>
           </div>
         </div>
@@ -144,7 +144,7 @@
 
                <!-- SASS BAR -->
 
-            <div class="progress-container progress-primary"><span class="progress-badge">SASS</span>
+            <div class="progress-container progress-primary"><span class="progress-badge">Adobe Lightroom</span>
               <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">60%</span>
               </div>
@@ -158,7 +158,7 @@
 
             <div class="progress-container progress-primary"><span class="progress-badge">Bootstrap</span>
               <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div><span class="progress-value">75%</span>
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 65%;"></div><span class="progress-value">65%</span>
               </div>
             </div>
           </div>
@@ -321,14 +321,14 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
-            <p><i>Duration</i></p>
-            <div class="h5"><i>Position</i></div>
+            <p><i>2 Months</i></p>
+            <div class="h5"><i>Transcriber</i></div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Experience-1</div>
-            <p><i>Elaborate your Work Role</i></p>
+            <div class="h5">Transcriber</div>
+            <p><i>Worked as a transcriber for 2 months</i></p>
           </div>
         </div>
       </div>
@@ -378,31 +378,14 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-education-header">
-            <p><i>Duration</i></p>
-            <div class="h5">Master's Degree</div>
-          </div>
-        </div>
-        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-          <div class="card-body">
-            <div class="h5"><i>Enter your Speciality In</i></div>
-            <p class="category">University name</p>
-            <p>Describe</p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="card">
-      <div class="row">
-        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-          <div class="card-body cc-education-header">
-            <p><i>Duration</i></p>
+            <p><i>2019-Present</i></p>
             <div class="h5">Bachelor's Degree</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5"><i>Enter your Speciality In</i></div>
-            <p class="category">University name</p>
+            <div class="h5"><i>Computer Engineering</i></div>
+            <p class="category">Vishwakarma Institute of Information Technology</p>
             <p>Describe</p>
           </div>
         </div>
@@ -412,14 +395,31 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-education-header">
-            <p><i>Duration</i></p>
+            <p><i>2017-2019</i></p>
+            <div class="h5">Junior College</div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5"><i>PCM</i></div>
+            <p class="category">Nowrosjee Wadia College</p>
+            <p>Describe</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-education-header">
+            <p><i>2011-2017</i></p>
             <div class="h5">High School</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5"><i>Enter your Speciality In</i></div>
-            <p class="category">School name</p>
+            <div class="h5"><i>Science and Mathematics</i></div>
+            <p class="category">Pawar Public School</p>
             <p>Describe</p>
           </div>
         </div>
@@ -483,11 +483,11 @@
                 <div class="col-md-6">
                   <div class="card-body">
                     <p class="mb-0"><strong>Address </strong></p>
-                    <p class="pb-2">Enter Your Adress</p>
+                    <p class="pb-2">DSK Sundarban, Hadapsar, Pune.</p>
                     <p class="mb-0"><strong>Phone</strong></p>
-                    <p class="pb-2">Enter Your Number</p>
+                    <p class="pb-2">9075213884</p>
                     <p class="mb-0"><strong>Email</strong></p>
-                    <p>Enter Your Email</p>
+                    <p>wyash090@gmail.com</p>
                   </div>
                 </div>
               </div>
